<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout_main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/content_frame_main_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Layout of buttons should be improved a lot!!!!!-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_start_mainactivity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="silom-regular"
                android:text="@string/btn_start_mainactivity_text" />

            <Button
                android:id="@+id/btn_test_mainactivity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="silom-regular"
                android:layout_weight="1"
                android:text="@string/btn_test_mainactivity_text" />

            <Button
                android:id="@+id/btn_review_mainactivity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="silom-regular"
                android:layout_weight="1"
                android:text="@string/btn_review_mainactivity_text" />

            <Button
                android:id="@+id/btn_score_mainactivity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="silom-regular"
                android:layout_weight="1"
                android:text="@string/btn_score_mainactivity_text" />

            <Button
                android:id="@+id/btn_exit_mainactivity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="silom-regular"
                android:layout_weight="1"
                android:text="@string/btn_exit_mainactivity_text" />
        </LinearLayout>

    </FrameLayout>

    <ListView
        android:id="@+id/left_drawer_main_activity"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#000"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"></ListView>

</android.support.v4.widget.DrawerLayout>
